--- a/debian.headless-both/changelog
+++ b/debian.headless-both/changelog
@@ -1,3 +1,9 @@
+oracle-java6 (6.35-3) UNRELEASED; urgency=low
+
+  * Change from legacy Sun to current Oracle naming.
+
+ -- Barry Allard <barry.allard@gmail.com> Sat, 06 Sep 2012 10:09:23 -0700
+
 sun-java6 (6.35-2) UNRELEASED; urgency=low
 
   * Remove even more obsolete code
